# BSMS

./: .gitignore  README.md  docker-compose.yml  roadmap.md
.antigravitycli/: e7886cc8-05bd-4905-8e73-061ae7e8e513.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f6d68b04b34_add_vehicle_and_parking.py  215a7f6e890a_initial_schema.py  2500a22922fc_add_forum_and_polls.py  49a866710e29_create_complaints_tables.py  8cba9d80fee2_add_visitor_model.py  ff626c9eddb9_create_amenity_and_booking_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  amenity.py  audit_log.py  billing.py  building.py  complaint.py  forum.py  member.py  notice.py  parking.py  poll.py  staff.py  unit.py  user.py  vehicle.py  visitor.py
backend/app/routers/: amenities.py  audit_log.py  auth.py  billing.py  buildings.py  complaints.py  dashboard.py  forum.py  members.py  notices.py  parking.py  polls.py  staff.py  super_admin.py  units.py  vehicles.py  visitors.py
backend/app/schemas/: amenity.py  audit_log.py  auth.py  billing.py  building.py  complaint.py  dashboard.py  forum.py  member.py  notice.py  parking.py  poll.py  staff.py  unit.py  vehicle.py  visitor.py
backend/app/services/: audit.py  auth.py  building_scope.py  rate_limit.py  schema_migrate.py  user_response.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: admin_workflows.spec.ts  (+9 more)
(+52 files in other folders)
